# gitbeat

./: .env  .gitignore  CLAUDE.md  README.md  agent.js  integrated-agent.js  team-analysis-agent.js
frontend/: package-lock.json  package.json  pnpm-lock.yaml  supabase-schema.sql
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyze-contributors/: route.ts
frontend/app/api/dust/conversation/: route.ts
frontend/app/api/songs/: route.ts
frontend/app/api/songs/[id]/upvote/: route.ts
frontend/app/api/songs/ai-generated/: route.ts
frontend/app/api/songs/upload/: route.ts
frontend/app/api/suno/callback/: route.ts
frontend/app/api/suno/generate/: route.ts
frontend/app/api/suno/status/[taskId]/: route.ts
frontend/components/: BeatsAnalysis.tsx  ErrorMessage.tsx  Header.tsx  Leaderboard.tsx  LoadingMessage.tsx  RepositoryAnalysis.tsx  SongCard.tsx  TabNavigation.tsx  Toast.tsx
frontend/components/hooks/: useLoadingText.ts
frontend/components/types/: index.ts
frontend/components/utils/: github.ts
frontend/lib/: github-analysis.ts  supabase.ts
frontend/lib/hooks/: useSunoPolling.ts
frontend/lib/types/: dust.ts  suno.ts
mcp-server/: .env  .env.example  .gitignore  README.md  api.py  pyproject.toml  requirements.txt
mcp-server/.vercel/: project.json
mcp-server/gitbeat_mcp/: __init__.py  config.py  elevenlabs_service.py  server.py  tools.py
